infrastructure/configs/monitoring/alloy/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy
spec:
  parentRefs:
    - name: gateway
      namespace: kube-system
  hostnames: [alloy.homelab.veselabs.com]
  rules:
    - backendRefs:
        - name: alloy
          port: 12345
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy-otlp
spec:
  parentRefs:
    - name: gateway
      namespace: kube-system
  hostnames: [alloy-otlp.homelab.veselabs.com]
  rules:
    - backendRefs:
        - name: alloy
          port: 4318
      matches:
        - path:
            type: PathPrefix
            value: /v1
